...
          "stringUnit": {
            "state": "translated",
            "value": "Add"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Add to That Collection"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Change Status?"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Create Separate Collection"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "This day's offering has already been deposited"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Deposited"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Open"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Expenses"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Donor name (leave blank if anonymous)"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Add Regular Expenses"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Checks"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Payee"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Amount"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Check #"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Envelope #"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Categories"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Church Info"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Donors"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Regular Expenses"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Envelopes"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Loose Cash"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Service date"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Import Chase PDF statement"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Bank Statement"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Reconcile"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Description"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "No Regular Expenses"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "New Regular Expense"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Request Reimbursement"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "From (who paid)"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Annual Giving Statements"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Monthly Treasurer Report"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Weekly Report"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Reports"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Choose from Library"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Paid"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "Pending"
          }
        },
...
          "stringUnit": {
            "state": "translated",
            "value": "More"
          }
        },
...
